compute number of parameters.

--- a/Convergence.ipynb
+++ b/Convergence.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Setup Notebook"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -14,6 +21,15 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "sns.set()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Define Parameter Computations\n",
+    "\n",
+    "Locate loss files and define functions to compute the different loss metrics."
    ]
   },
   {
@@ -350,6 +366,252 @@
     "    df = df.append(dict_, ignore_index=True)\n",
     "df.drop('data', inplace=True, axis=1)\n",
     "print(df.round(2).to_markdown())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Compute Number of Parameters\n",
+    "Compute number of total parameters and trainable parameters for each model used on both MNIST and the toy data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from models import DRAW, VariationalAutoencoder, LadderVAE, \\\n",
+    "    Flow, AffineCouplingBijection, StandardNormal, Squeeze2d, Augment, \\\n",
+    "    UniformDequantization, DenseNet, ElementwiseParams2d, \\\n",
+    "    StandardUniform, Slice, ActNormBijection2d, Conv1x1, \\\n",
+    "    Reverse, ElementwiseParams, ActNormBijection\n",
+    "    \n",
+    "import torch.nn as nn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def n_params(model):\n",
+    "    \"\"\"Compute number of parameters in the given model\"\"\"\n",
+    "    return sum([np.prod(p.size()) for p in model.parameters()])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Instantiate Toy Data Models\n",
+    "Instantiate FLow, Ladder VAE and Standard VAE models with same dimensions as the trained models on the toy data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define config\n",
+    "config = {\n",
+    "    'as_beta': True\n",
+    "}\n",
+    "x_dim = [2, 4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate flow model\n",
+    "def net():\n",
+    "    return nn.Sequential(\n",
+    "        nn.Linear(1, 200), nn.ReLU(),\n",
+    "        nn.Linear(200, 100), nn.ReLU(),\n",
+    "        nn.Linear(100, 2), ElementwiseParams(2)\n",
+    "    )\n",
+    "\n",
+    "model_flow_toy = Flow(\n",
+    "    base_dist=StandardNormal((2,)),\n",
+    "    transforms=[\n",
+    "        AffineCouplingBijection(net()), ActNormBijection(2), Reverse(2),\n",
+    "        AffineCouplingBijection(net()), ActNormBijection(2), Reverse(2),\n",
+    "        AffineCouplingBijection(net()), ActNormBijection(2), Reverse(2),\n",
+    "        AffineCouplingBijection(net()), ActNormBijection(2),\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate Ladder VAE model\n",
+    "config['h_dim'] = [128, 128, 128]\n",
+    "config['z_dim'] = [4, 4, 4]\n",
+    "model_lvae_toy = LadderVAE(config, x_dim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantate Standard VAE model\n",
+    "config['h_dim'] = [128, 128, 128]\n",
+    "config['z_dim'] = 4\n",
+    "model_vae_toy = VariationalAutoencoder(config, x_dim)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Instantiate MNIST Models\n",
+    "Instantiate FLow, Ladder VAE, Standard VAE and DRAW models with same dimensions as the trained models on the MNIST data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define config\n",
+    "config = {\n",
+    "    'as_beta': True\n",
+    "}\n",
+    "x_shape = [28, 28]\n",
+    "x_dim = x_shape[0] * x_shape[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate Flow model\n",
+    "def net(channels):\n",
+    "    return nn.Sequential(\n",
+    "        DenseNet(\n",
+    "            in_channels=channels//2,\n",
+    "            out_channels=channels,\n",
+    "            num_blocks=1,\n",
+    "            mid_channels=64,\n",
+    "            depth=8,\n",
+    "            growth=16,\n",
+    "            dropout=0.0,\n",
+    "            gated_conv=True,\n",
+    "            zero_init=True\n",
+    "        ),\n",
+    "        ElementwiseParams2d(2)\n",
+    "    )\n",
+    "\n",
+    "model_flow = Flow(\n",
+    "    base_dist=StandardNormal((8, 7, 7)),\n",
+    "    transforms=[\n",
+    "        UniformDequantization(num_bits=1),\n",
+    "        Augment(StandardUniform((1, 28, 28)), x_size=1),\n",
+    "        AffineCouplingBijection(net(2)), ActNormBijection2d(2), Conv1x1(2),\n",
+    "        AffineCouplingBijection(net(2)), ActNormBijection2d(2), Conv1x1(2),\n",
+    "        AffineCouplingBijection(net(2)), ActNormBijection2d(2), Conv1x1(2),\n",
+    "        AffineCouplingBijection(net(2)), ActNormBijection2d(2), Conv1x1(2),\n",
+    "        Squeeze2d(), Slice(StandardNormal((4, 14, 14)), num_keep=4),\n",
+    "        AffineCouplingBijection(net(4)), ActNormBijection2d(4), Conv1x1(4),\n",
+    "        AffineCouplingBijection(net(4)), ActNormBijection2d(4), Conv1x1(4),\n",
+    "        AffineCouplingBijection(net(4)), ActNormBijection2d(4), Conv1x1(4),\n",
+    "        AffineCouplingBijection(net(4)), ActNormBijection2d(4), Conv1x1(4),\n",
+    "        Squeeze2d(), Slice(StandardNormal((8, 7, 7)), num_keep=8),\n",
+    "        AffineCouplingBijection(net(8)), ActNormBijection2d(8), Conv1x1(8),\n",
+    "        AffineCouplingBijection(net(8)), ActNormBijection2d(8), Conv1x1(8),\n",
+    "        AffineCouplingBijection(net(8)), ActNormBijection2d(8), Conv1x1(8),\n",
+    "        AffineCouplingBijection(net(8)), ActNormBijection2d(8), Conv1x1(8),\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate Ladder VAE model\n",
+    "config['h_dim'] = [512, 256, 256]\n",
+    "config['z_dim'] = [64, 64, 64]\n",
+    "model_lvae = LadderVAE(config, x_dim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantate Standard VAE model\n",
+    "config['h_dim'] = [512, 256, 128, 64]\n",
+    "config['z_dim'] = 64\n",
+    "model_vae = VariationalAutoencoder(config, x_dim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instante DRAW model\n",
+    "config['h_dim'] = 256\n",
+    "config['z_dim'] = 32\n",
+    "config['T'] = 10\n",
+    "config['N'] = 12\n",
+    "config['attention'] = 'base'\n",
+    "model_draw = DRAW(config, x_shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Comptue Params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model\tMNIST\tToy\n",
+      "flow\t3634680\t82824\n",
+      "lvae\t1464464\t279880\n",
+      "vae\t1162000\t269336\n",
+      "draw\t3262304\tn/a\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Model\\tMNIST\\tToy')\n",
+    "for name, model, model_toy in [('flow', model_flow, model_flow_toy), ('lvae', model_lvae, model_lvae_toy), ('vae', model_vae, model_vae_toy), ('draw', model_draw, None)]:\n",
+    "    print_out = f'{name}\\t{n_params(model)}\\t'\n",
+    "    if model_toy == None:\n",
+    "        print_out += 'n/a'\n",
+    "    else:\n",
+    "        print_out += f'{n_params(model_toy)}'\n",
+    "    print(print_out)"
    ]
   },
   {
