--- a/Generate Data.ipynb
+++ b/Generate Data.ipynb
@@ -72,6 +72,46 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inspect Omniglot Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import DataLoader\n",
+    "from torchvision.datasets import MNIST, CIFAR10, \\\n",
+    "    Omniglot\n",
+    "from torchvision.transforms import Compose, ToTensor, \\\n",
+    "    Lambda, Normalize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# binarize transformation\n",
+    "def tmp_lambda(x):\n",
+    "    return torch.bernoulli(x)\n",
+    "\n",
+    "# get Omniglot data\n",
+    "train_data = Omniglot('./data/', download=True, transform=data_transform)\n",
+    "\n",
+    "# define split\n",
+    "data_split = [15424, 3856]\n",
+    "\n",
+    "# split into training and validation sets\n",
+    "train_set, val_set = torch.utils.data.random_split(train_data, data_split)"
+   ]
   }
  ],
  "metadata": {
